--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,21 @@
         android:theme="@style/Theme.Binarecommerce"
         tools:targetApi="31">
         <activity
+            android:name=".view.ui.ProfileActivity"
+            android:exported="false" />
+        <activity
+            android:name=".view.ui.RegisterActivity"
+            android:exported="false" />
+        <activity
+            android:name=".view.ui.DetailActivity"
+            android:exported="false" />
+        <activity
+            android:name=".view.ui.LoginActivity"
+            android:exported="false" />
+        <activity
+            android:name=".view.ui.HomeActivity"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
