--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,6 @@
 buildscript {
+    ext.hilt_version = '2.45'
+
     repositories {
         // Make sure that you have the following two repositories
         google()  // Google's Maven repository
@@ -6,6 +8,7 @@ buildscript {
     }
     dependencies {
         classpath 'com.google.gms:google-services:4.3.10'
+        classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
         // Add the dependency for the Crashlytics Gradle plugin
         classpath 'com.google.firebase:firebase-crashlytics-gradle:2.9.5'
 
