--- a/app/build.gradle
+++ b/app/build.gradle
@@ -93,4 +93,7 @@ dependencies {
     implementation "androidx.room:room-runtime:2.3.0"
     kapt "androidx.room:room-compiler:2.3.0"
     implementation "androidx.room:room-ktx:2.3.0"
+
+    //lottie splash
+    implementation 'com.airbnb.android:lottie:3.6.0'
 }
