--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,10 +15,10 @@
         android:theme="@style/Theme.Binarecommerce"
         tools:targetApi="31">
         <activity
-            android:name=".CartActivity"
+            android:name=".view.ui.CartActivity"
             android:exported="false" />
         <activity
-            android:name=".FavoriteActivity"
+            android:name=".view.ui.FavoriteActivity"
             android:exported="false" />
         <activity
             android:name=".view.ui.ProfileActivity"
